--- a/Win32-宽字节/2021-10-30.md
+++ b/Win32-宽字节/2021-10-30.md
@@ -104,4 +104,45 @@ a=5,b=3
 Win32 API中的宽字符
 ---
 
+**什么是Win32 API？有哪些？在哪里？**
+
+主要是存放在 C:\WINDOWS\system32 下面所有的dll
+
+**非常重要的几个DLL**
+
+Kernel32.dll:最核心的功能模块，比如管理内存、进程和线程相关的函数等.
+
+User32.dll:是Windows用户界面相关应用程序接口,如创建窗口和发送消息等.
+
+GDI32.dll:全称是Graphical Device Interface(图形设备接口),包含用于画图和显示文本的函数
+
+**Win32 API中的宽字符和多字节字符**
+
+Windows是使用C语言开发的，Win32 API同时支持宽字符与多字节字符.
+
+**字符类型**
+
+	char 	CHAR	
+	wchar_t  WCHAR		
+	宏   TCHAR	
+
+**字符串指针**
+
+	PSTR(LPSTR) 指向多字节字符串		
+	PWSTR(LPWSTR) 指向宽字符串		
+	宏  	PTSTR(LPTSTR)
+
+**字符数组赋值**
+
+	CHAR cha[] = "中国";						
+	WCHAR chw[] = L"中国";						
+	TCHAR cht[] = TEXT("中国");			
+
+**为字符串指针赋值：**
+
+	PSTR pszChar = "china";				//多字节字符				
+	PWSTR pszWChar = L"china";			//宽字符				
+	PTSTR pszTChar = TEXT("china");			//如果项目是ASCII的 相当于"china" UNICODE 相当于L"china"
+
+Windows提供的API 凡是需要传递字符串参数的函数，都会提供两个版本和一个宏.
 
