--- a/Win32-宽字节/2021-10-30.md
+++ b/Win32-宽字节/2021-10-30.md
@@ -146,3 +146,13 @@ Windows是使用C语言开发的，Win32 API同时支持宽字符与多字节字
 
 Windows提供的API 凡是需要传递字符串参数的函数，都会提供两个版本和一个宏.
 
+
+Win32的入口程序
+---
+
+		int __clrcall WinMain(
+		  [in] HINSTANCE hInstance,
+		  [in] HINSTANCE hPrevInstance,
+		  [in] LPSTR     lpCmdLine,
+		  [in] int       nShowCmd
+		);
